filling out all the content for the dust section

--- a/docs/items/dusts/aluminium_dust.mdx
+++ b/docs/items/dusts/aluminium_dust.mdx
@@ -4,7 +4,34 @@ title: Aluminium Dust
 
 <ItemImage file="aluminium_dust" alt="Aluminium Dust" size="200" />
 
-# Aluminium Dust
+# Aluminum Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Aluminum Dust** used to produce <McItem slug="techreborn:aluminum_ingot" inline={true}/> which is widely used in crafting.
+
+## Recipe
+
+<McItem slug="techreborn:grinder" inline={true}/> recipe:  
+<McItem slug="techreborn:aluminum_ingot" inline={true}/> → <McItem slug="techreborn:aluminum_dust" inline={true}/>
+
+<McItem slug="techreborn:industrial_grinder" inline={true}/> recipe:  
+<McItem slug="techreborn:bauxite_ore" inline={true}/> + <McItem slug="techreborn:water_cell" inline={true}/> → 2x <McItem slug="techreborn:bauxite_dust" inline={true}/> + <McItem slug="techreborn:aluminum_dust" inline={true}/>  
+<McItem slug="techreborn:sodalite_ore" inline={true}/> + <McItem slug="techreborn:water_cell" inline={true}/> → 12x <McItem slug="techreborn:sodalite_dust" inline={true}/> + 3x <McItem slug="techreborn:aluminum_dust" inline={true}/>
+
+<McItem slug="techreborn:industrial_electrolyzer" inline={true}/> recipes:  
+- 8x <McItem slug="techreborn:clay_dust" inline={true}/> + 5x <McItem slug="techreborn:empty_cell" inline={true}/> → <McItem slug="techreborn:lithium_cell" inline={true}/> + 2x <McItem slug="techreborn:silicon_cell" inline={true}/> + 2x <McItem slug="techreborn:aluminum_dust" inline={true}/> + 2x <McItem slug="techreborn:sodium_cell" inline={true}/>  
+- 29x <McItem slug="techreborn:lazurite_dust" inline={true}/> + 10x <McItem slug="techreborn:empty_cell" inline={true}/> → 3x <McItem slug="techreborn:aluminum_dust" inline={true}/> + 3x <McItem slug="techreborn:silicon_cell" inline={true}/> + 2x <McItem slug="techreborn:calcium_cell" inline={true}/> + 4x <McItem slug="techreborn:sodium_cell" inline={true}/>  
+- 23x <McItem slug="techreborn:sodalite_dust" inline={true}/> + 8x <McItem slug="techreborn:empty_cell" inline={true}/> → 4x <McItem slug="techreborn:sodium_cell" inline={true}/> + 3x <McItem slug="techreborn:aluminum_dust" inline={true}/> + 3x <McItem slug="techreborn:silicon_cell" inline={true}/> + <McItem slug="techreborn:chlorite_cell" inline={true}/>  
+- 12x <McItem slug="techreborn:bauxite_dust" inline={true}/> + 8x <McItem slug="techreborn:empty_cell" inline={true}/> → 8x <McItem slug="techreborn:aluminum_dust" inline={true}/> + 2x <McItem slug="techreborn:small_pile_of_titanium_dust" inline={true}/> + 5x <McItem slug="techreborn:hydrogen_cell" inline={true}/> + 3x <McItem slug="techreborn:compressed_air_cell" inline={true}/>  
+- 9x <McItem slug="techreborn:ruby_dust" inline={true}/> + 3x <McItem slug="techreborn:empty_cell" inline={true}/> → 2x <McItem slug="techreborn:aluminum_dust" inline={true}/> + <McItem slug="techreborn:chrome_dust" inline={true}/> + 3x <McItem slug="techreborn:compressed_air_cell" inline={true}/>  
+- 8x <McItem slug="techreborn:sapphire_dust" inline={true}/> + 3x <McItem slug="techreborn:empty_cell" inline={true}/> → 2x <McItem slug="techreborn:aluminum_dust" inline={true}/> + 3x <McItem slug="techreborn:compressed_air_cell" inline={true}/>  
+- 29x <McItem slug="techreborn:emerald_dust" inline={true}/> + 18x <McItem slug="techreborn:empty_cell" inline={true}/> → 2x <McItem slug="techreborn:aluminum_dust" inline={true}/> + 3x <McItem slug="techreborn:beryllium_cell" inline={true}/> + 6x <McItem slug="techreborn:silicon_cell" inline={true}/> + 9x <McItem slug="techreborn:compressed_air_cell" inline={true}/>  
+- 20x <McItem slug="techreborn:pyrope_dust" inline={true}/> + 9x <McItem slug="techreborn:empty_cell" inline={true}/> → 3x <McItem slug="techreborn:magnesium_dust" inline={true}/> + 2x <McItem slug="techreborn:aluminum_dust" inline={true}/> + 3x <McItem slug="techreborn:silicon_cell" inline={true}/> + 6x <McItem slug="techreborn:compressed_air_cell" inline={true}/>  
+- 20x <McItem slug="techreborn:almandine_dust" inline={true}/> + 9x <McItem slug="techreborn:empty_cell" inline={true}/> → 3x <McItem slug="techreborn:iron_dust" inline={true}/> + 2x <McItem slug="techreborn:aluminum_dust" inline={true}/> + 3x <McItem slug="techreborn:silicon_cell" inline={true}/> + 6x <McItem slug="techreborn:compressed_air_cell" inline={true}/>  
+- 20x <McItem slug="techreborn:spessartine_dust" inline={true}/> + 9x <McItem slug="techreborn:empty_cell" inline={true}/> → 2x <McItem slug="techreborn:aluminum_dust" inline={true}/> + 3x <McItem slug="techreborn:manganese_dust" inline={true}/> + 3x <McItem slug="techreborn:silicon_cell" inline={true}/> + 6x <McItem slug="techreborn:compressed_air_cell" inline={true}/>  
+- 20x <McItem slug="techreborn:grossular_dust" inline={true}/> + 12x <McItem slug="techreborn:empty_cell" inline={true}/> → 3x <McItem slug="techreborn:calcium_cell" inline={true}/> + 2x <McItem slug="techreborn:aluminum_dust" inline={true}/> + 3x <McItem slug="techreborn:silicon_cell" inline={true}/> + 6x <McItem slug="techreborn:compressed_air_cell" inline={true}/>
+
+## Usage
+
+<McItem slug="techreborn:blast_furnace" inline={true}/> recipe:  
+<McItem slug="techreborn:aluminum_dust" inline={true}/> → <McItem slug="techreborn:aluminum_ingot" inline={true}/>  
+_Requires Industrial Blast Furnace with 1700 heat._
