--- a/docs/items/dusts/amethyst_dust.mdx
+++ b/docs/items/dusts/amethyst_dust.mdx
@@ -6,5 +6,12 @@ title: Amethyst Dust
 
 # Amethyst Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Amethyst Dust** is a dust produced by grinding.
+
+## Recipe
+
+<McItem slug="techreborn:grinder" inline={true}/> recipe:  
+<McItem slug="minecraft:amethyst_block" inline={true}/> → 2x <McItem slug="techreborn:amethyst_dust" inline={true}/>
+
+**Amethyst Dust** can be recompressed back into a gem using raw power of TNT in an <McItem slug="techreborn:implosion_compressor" inline={true}/>:  
+8x <McItem slug="techreborn:amethyst_dust" inline={true}/> + 16x <McItem slug="minecraft:TNT" inline={true}/> → 16x <McItem slug="minecraft:amethyst_shard" inline={true}/> + 1x <McItem slug="techreborn:quartz_dust" inline={true}/>
