--- a/docs/items/dusts/andesite_dust.mdx
+++ b/docs/items/dusts/andesite_dust.mdx
@@ -6,5 +6,14 @@ title: Andesite Dust
 
 # Andesite Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Andesite Dust** is a useless dust added by TechReborn. Maybe in future it will see some bright days.
+
+## Recipe
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input techreborn:small_pile_of_andesite_dust techreborn:small_pile_of_andesite_dust air input techreborn:small_pile_of_andesite_dust techreborn:small_pile_of_andesite_dust air input air air air output techreborn:andesite_dust"/>
+
+## Usage
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input air air air input air techreborn:andesite_dust air input air air air output techreborn:small_pile_of_andesite_dust,4"/>
