--- a/docs/items/dusts/bronze_dust.mdx
+++ b/docs/items/dusts/bronze_dust.mdx
@@ -6,5 +6,19 @@ title: Bronze Dust
 
 # Bronze Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Bronze Dust** is a dust added by TechReborn.
+
+## Recipe
+
+<McItem slug="techreborn:grinder" inline={true}/> recipe:  
+<McItem slug="techreborn:bronze_ingot" inline={true}/> → <McItem slug="techreborn:bronze_dust" inline={true}/>
+
+## Usage
+
+**Smelting recipe:**  
+<McItem slug="techreborn:bronze_dust" inline={true}/> → <McItem slug="techreborn:bronze_ingot" inline={true}/>
+
+<McItem slug="techreborn:industrial_centrifuge" inline={true}/> recipe:  
+<McItem slug="techreborn:bronze_dust" inline={true}/> →  
+6x <McItem slug="techreborn:copper_nugget" inline={true}/> +  
+3x <McItem slug="techreborn:tin_nugget" inline={true}/>
