--- a/docs/items/dusts/chrome_dust.mdx
+++ b/docs/items/dusts/chrome_dust.mdx
@@ -6,5 +6,31 @@ title: Chrome Dust
 
 # Chrome Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Chrome Dust** is a dust added by TechReborn. It is mainly used to produce <McItem slug="techreborn:chrome_ingot" inline={true}/> or some alloys.
+
+## Recipe
+
+<CraftingTable recipe="input techreborn:small_pile_of_chrome_dust techreborn:small_pile_of_chrome_dust air input techreborn:small_pile_of_chrome_dust techreborn:small_pile_of_chrome_dust air input air air air output techreborn:chrome_dust"/>
+
+<McItem slug="techreborn:grinder" inline={true}/> recipe:  
+<McItem slug="techreborn:chrome_ingot" inline={true}/> → <McItem slug="techreborn:chrome_dust" inline={true}/>
+
+<McItem slug="techreborn:industrial_electrolyzer" inline={true}/> recipes:  
+- 9x <McItem slug="techreborn:ruby_dust" inline={true}/> + 3x <McItem slug="techreborn:empty_cell" inline={true}/> →  
+  2x <McItem slug="techreborn:aluminium_dust" inline={true}/> +  
+  <McItem slug="techreborn:chrome_dust" inline={true}/> +  
+  3x <McItem slug="techreborn:compressed_air_cell" inline={true}/>
+
+- 20x <McItem slug="techreborn:uvarovite_dust" inline={true}/> + 12x <McItem slug="techreborn:empty_cell" inline={true}/> →  
+  3x <McItem slug="techreborn:calcium_cell" inline={true}/> +  
+  2x <McItem slug="techreborn:chrome_dust" inline={true}/> +  
+  3x <McItem slug="techreborn:silicon_cell" inline={true}/> +  
+  6x <McItem slug="techreborn:compressed_air_cell" inline={true}/>
+
+## Usage
+
+<CraftingTable recipe="input air air air input air techreborn:chrome_dust air input air air air output techreborn:small_pile_of_chrome_dust,4"/>
+
+<McItem slug="techreborn:blast_furnace" inline={true}/> recipe:  
+<McItem slug="techreborn:chrome_dust" inline={true}/> → <McItem slug="techreborn:chrome_ingot" inline={true}/>  
+_This operation requires 1700 heat._
