--- a/docs/items/dusts/diorite_dust.mdx
+++ b/docs/items/dusts/diorite_dust.mdx
@@ -6,5 +6,12 @@ title: Diorite Dust
 
 # Diorite Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Diorite Dust** is a useless dust added by TechReborn. Maybe in the future it will see some bright days.
+
+## Recipe
+
+<CraftingTable recipe="input techreborn:small_pile_of_diorite_dust techreborn:small_pile_of_diorite_dust air input techreborn:small_pile_of_diorite_dust techreborn:small_pile_of_diorite_dust air input air air air output techreborn:diorite_dust"/>
+
+## Usage
+
+<CraftingTable recipe="input air air air input air techreborn:diorite_dust air input air air air output techreborn:small_pile_of_diorite_dust,4"/>
