--- a/docs/items/dusts/dusts.mdx
+++ b/docs/items/dusts/dusts.mdx
@@ -12,7 +12,7 @@ or <McItem slug="techreborn:industrial_grinder"/>
 
 - <McItem slug="almandine_dust" pack="techreborn"/>
 - <McItem slug="aluminium_dust" pack="techreborn"/>
-- <McItem slug="amethyst_dust" pack="techreborn" overrides={{ image: true }} />
+- <McItem slug="amethyst_dust" pack="techreborn"/>
 - <McItem slug="andesite_dust" pack="techreborn"/>
 - <McItem slug="andradite_dust" pack="techreborn"/>
 - <McItem slug="ashes" pack="techreborn"/>
@@ -26,7 +26,7 @@ or <McItem slug="techreborn:industrial_grinder"/>
 - <McItem slug="cinnabar_dust" pack="techreborn"/>
 - <McItem slug="clay_dust" pack="techreborn"/>
 - <McItem slug="coal_dust" pack="techreborn"/>
-- <McItem slug="dark_ashes_dust" pack="techreborn"/>
+- <McItem slug="dark_ashes" pack="techreborn"/>
 - <McItem slug="diamond_dust" pack="techreborn"/>
 - <McItem slug="diorite_dust" pack="techreborn"/>
 - <McItem slug="electrum_dust" pack="techreborn"/>
