--- a/docs/items/dusts/ender_eye_dust.mdx
+++ b/docs/items/dusts/ender_eye_dust.mdx
@@ -6,5 +6,19 @@ title: Ender Eye Dust
 
 # Ender Eye Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Ender Eye Dust** is a dust added by TechReborn. It is used for further processing.
+
+## Recipe
+
+<CraftingTable recipe="input techreborn:small_pile_of_ender_eye_dust techreborn:small_pile_of_ender_eye_dust air input techreborn:small_pile_of_ender_eye_dust techreborn:small_pile_of_ender_eye_dust air input air air air output techreborn:ender_eye_dust"/>
+
+<McItem slug="techreborn:grinder" inline={true}/> recipe:  
+<McItem slug="minecraft:ender_eye" inline={true}/> → 2x <McItem slug="techreborn:ender_eye_dust" inline={true}/>
+
+## Usage
+
+<CraftingTable recipe="input air air air input air techreborn:ender_eye_dust air input air air air output techreborn:small_pile_of_ender_eye_dust,4"/>
+
+<McItem slug="techreborn:industrial_centrifuge" inline={true}/> recipe:  
+2x <McItem slug="techreborn:ender_eye_dust" inline={true}/> →  
+2x <McItem slug="techreborn:ender_pearl_dust" inline={true}/> + <McItem slug="minecraft:blaze_powder" inline={true}/>
