--- a/docs/items/dusts/granite_dust.mdx
+++ b/docs/items/dusts/granite_dust.mdx
@@ -6,5 +6,12 @@ title: Granite Dust
 
 # Granite Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Granite Dust** is a useless dust added by TechReborn. Maybe in the future it will see some bright days.
+
+## Recipe
+
+<CraftingTable recipe="input techreborn:small_pile_of_granite_dust techreborn:small_pile_of_granite_dust air input techreborn:small_pile_of_granite_dust techreborn:small_pile_of_granite_dust air input air air air output techreborn:granite_dust"/>
+
+## Usage
+
+<CraftingTable recipe="input air air air input air techreborn:granite_dust air input air air air output techreborn:small_pile_of_granite_dust,4"/>
