--- a/docs/items/dusts/magnesium_dust.mdx
+++ b/docs/items/dusts/magnesium_dust.mdx
@@ -6,5 +6,31 @@ title: Magnesium Dust
 
 # Magnesium Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Magnesium Dust** could be used to craft <McItem slug="techreborn:magnalium_plate" inline={true}/>.
+
+## Recipe
+
+<CraftingTable recipe="input techreborn:small_pile_of_magnesium_dust techreborn:small_pile_of_magnesium_dust air input techreborn:small_pile_of_magnesium_dust techreborn:small_pile_of_magnesium_dust air input air air air output techreborn:magnesium_dust"/>
+
+<McItem slug="techreborn:industrial_centrifuge" inline={true}/> recipe:  
+<McItem slug="techreborn:marble_dust" inline={true}/> →  
+<McItem slug="techreborn:magnesium_dust" inline={true}/> +  
+7x <McItem slug="techreborn:calcite_dust" inline={true}/>
+
+<McItem slug="techreborn:industrial_electrolyzer" inline={true}/> recipes:  
+- 9x <McItem slug="techreborn:peridot_dust" inline={true}/> + <McItem slug="techreborn:empty_cell" inline={true}/> →  
+  2x <McItem slug="techreborn:magnesium_dust" inline={true}/> +  
+  2x <McItem slug="techreborn:iron_dust" inline={true}/> +  
+  <McItem slug="techreborn:silicon_cell" inline={true}/> +  
+  2x <McItem slug="techreborn:compressed_air_cell" inline={true}/>
+- 20x <McItem slug="techreborn:pyrope_dust" inline={true}/> + 9x <McItem slug="techreborn:empty_cell" inline={true}/> →  
+  3x <McItem slug="techreborn:magnesium_dust" inline={true}/> +  
+  2x <McItem slug="techreborn:aluminium_dust" inline={true}/> +  
+  3x <McItem slug="techreborn:silicon_cell" inline={true}/> +  
+  6x <McItem slug="techreborn:compressed_air_cell" inline={true}/>
+
+## Usage
+
+<CraftingTable recipe="input air air air input air techreborn:magnesium_dust air input air air air output techreborn:small_pile_of_magnesium_dust,4"/>
+
+<recipe> tool techreborn:rolling_machine input techreborn:aluminium_ingot techreborn:aluminium_ingot techreborn:aluminium_ingot input techreborn:magnesium_dust techreborn:magnesium_dust techreborn:magnesium_dust input techreborn:aluminium_ingot techreborn:aluminium_ingot techreborn:aluminium_ingot output techreborn:magnalium_plate,3 </recipe>
