--- a/docs/items/dusts/netherrack_dust.mdx
+++ b/docs/items/dusts/netherrack_dust.mdx
@@ -6,5 +6,14 @@ title: Netherrack Dust
 
 # Netherrack Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Netherrack Dust** is obtained by grinding <McItem slug="minecraft:netherrack" inline={true}/> using either  
+<McItem slug="techreborn:grinder" inline={true}/> or <McItem slug="techreborn:industrial_grinder" inline={true}/>.
+
+It can also be crafted from 4x <McItem slug="techreborn:small_pile_of_netherrack_dust" inline={true}/>  
+using a <McItem slug="minecraft:crafting_table" inline={true}/>.
+
+It can be used in the <McItem slug="techreborn:industrial_centrifuge" inline={true}/> to obtain:  
+- <McItem slug="minecraft:redstone" inline={true}/>  
+- <McItem slug="techreborn:sulfur_dust" inline={true}/>  
+- <McItem slug="techreborn:coal_dust" inline={true}/>  
+- <McItem slug="minecraft:gold_nugget" inline={true}/>
