--- a/docs/items/dusts/phosphorous_dust.mdx
+++ b/docs/items/dusts/phosphorous_dust.mdx
@@ -6,5 +6,12 @@ title: Phosphorous Dust
 
 # Phosphorous Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Phosphorous Dust** is a useless dust added by TechReborn. Maybe in the future it will see some bright days.
+
+## Recipe
+
+<CraftingTable recipe="input techreborn:small_pile_of_phosphorous_dust techreborn:small_pile_of_phosphorous_dust air input techreborn:small_pile_of_phosphorous_dust techreborn:small_pile_of_phosphorous_dust air input air air air output techreborn:phosphorous_dust"/>
+
+## Usage
+
+<CraftingTable recipe="input air air air input air techreborn:phosphorous_dust air input air air air output techreborn:small_pile_of_phosphorous_dust,4"/>
