--- a/docs/items/dusts/titanium_dust.mdx
+++ b/docs/items/dusts/titanium_dust.mdx
@@ -6,5 +6,24 @@ title: Titanium Dust
 
 # Titanium Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Titanium Dust** is a source for <McItem slug="techreborn:titanium_ingot" inline={true}/>, needed for many of the endgame machines.
+
+The source of the first few <McItem slug="techreborn:titanium_dust" inline={true}/> will be crafting from <McItem slug="techreborn:small_pile_of_titanium_dust" inline={true}/>
+
+Later, <McItem slug="techreborn:titanium_dust" inline={true}/> is best acquired by crafting from <McItem slug="techreborn:uu_matter" inline={true}/>
+
+## Recipe
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input techreborn:small_pile_of_titanium_dust techreborn:small_pile_of_titanium_dust air input techreborn:small_pile_of_titanium_dust techreborn:small_pile_of_titanium_dust air input air air air output techreborn:titanium_dust"/>
+
+<McItem slug="techreborn:grinder" inline={true}/> recipe:  
+<McItem slug="techreborn:titanium_ingot" inline={true}/> → <McItem slug="techreborn:titanium_dust" inline={true}/>
+
+## Usage
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input air air air input air techreborn:titanium_dust air input air air air output techreborn:small_pile_of_titanium_dust,4"/>
+
+<McItem slug="techreborn:blast_furnace" inline={true}/> recipe:  
+<McItem slug="techreborn:titanium_dust" inline={true}/> → <McItem slug="techreborn:titanium_ingot" inline={true}/>
