--- a/docs/items/dusts/yellow_garnet_dust.mdx
+++ b/docs/items/dusts/yellow_garnet_dust.mdx
@@ -6,5 +6,26 @@ title: Yellow Garnet Dust
 
 # Yellow Garnet Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Yellow Garnet Dust** is an intermediate product received by processing <McItem slug="techreborn:yellow_garnet" inline={true}/>.
+
+## Recipe
+
+<CraftingTable recipe="input techreborn:small_pile_of_yellow_garnet_dust techreborn:small_pile_of_yellow_garnet_dust air input techreborn:small_pile_of_yellow_garnet_dust techreborn:small_pile_of_yellow_garnet_dust air input air air air output techreborn:yellow_garnet_dust"/>
+
+<McItem slug="techreborn:grinder" inline={true}/> recipe:  
+<McItem slug="techreborn:yellow_garnet" inline={true}/> → <McItem slug="techreborn:yellow_garnet_dust" inline={true}/>
+
+## Usage
+
+**Yellow Garnet Dust** could be further processed in <McItem slug="techreborn:industrial_centrifuge" inline={true}/>  
+16x <McItem slug="techreborn:yellow_garnet_dust" inline={true}/> →  
+5x <McItem slug="techreborn:andradite_dust" inline={true}/> +  
+8x <McItem slug="techreborn:grossular_dust" inline={true}/> +  
+3x <McItem slug="techreborn:uvarovite_dust" inline={true}/>
+
+Besides that, **Yellow Garnet Dust** could be split into small piles using <McItem slug="minecraft:crafting_table" inline={true}/>  
+<CraftingTable recipe="input air air air input air techreborn:yellow_garnet_dust air input air air air output techreborn:small_pile_of_yellow_garnet_dust,4"/>
+
+Also, **Yellow Garnet Dust** could be compressed back into a gem using the raw power of TNT in the <McItem slug="techreborn:implosion_compressor" inline={true}/>  
+4x <McItem slug="techreborn:yellow_garnet_dust" inline={true}/> + 16x <McItem slug="minecraft:tnt" inline={true}/> →  
+3x <McItem slug="techreborn:yellow_garnet" inline={true}/> + 8x <McItem slug="techreborn:dark_ashes" inline={true}/>
