--- a/docs/items/dusts/almandine_dust.mdx
+++ b/docs/items/dusts/almandine_dust.mdx
@@ -6,5 +6,22 @@ title: Almandine Dust
 
 # Almandine Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Almandine Dust** is an intermediate product received by processing <McItem slug="techreborn:red_garnet_dust" inline={true}/> in <McItem slug="techreborn:industrial_centrifuge" inline={true}/>.
+
+## Recipe
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input techreborn:small_pile_of_almandine_dust techreborn:small_pile_of_almandine_dust air input techreborn:small_pile_of_almandine_dust techreborn:small_pile_of_almandine_dust air input air air air output techreborn:almandine_dust"/>
+
+<McItem slug="techreborn:industrial_centrifuge" inline={true}/> recipe:  
+16x <McItem slug="techreborn:red_garnet_dust" inline={true}/> →  
+3x <McItem slug="techreborn:pyrope_dust"/> + 5x <McItem slug="techreborn:almandine_dust" inline={true}/> + 8x <McItem slug="techreborn:spessartine_dust" inline={true}/>
+
+## Usage
+
+**Almandine Dust** could be further processed in <McItem slug="techreborn:industrial_electrolyzer" inline={true}/>  
+20x <McItem slug="techreborn:almandine_dust" inline={true}/> + 9x <McItem slug="techreborn:empty_cell" inline={true}/> →  
+3x <McItem slug="techreborn:iron_dust" inline={true}/> + 2x <McItem slug="techreborn:aluminium_dust" inline={true}/> + 3x <McItem slug="techreborn:silicon_cell" inline={true}/> + 6x <McItem slug="techreborn:compressed_air_cell" inline={true}/>
+
+Besides that, **Almandine Dust** could be split into small piles using <McItem slug="minecraft:crafting_table" inline={true}/>  
+<CraftingTable recipe="input air air air input air techreborn:almandine_dust air input air air air output techreborn:small_pile_of_almandine_dust,4"/>
