--- a/docs/items/dusts/basalt_dust.mdx
+++ b/docs/items/dusts/basalt_dust.mdx
@@ -6,5 +6,20 @@ title: Basalt Dust
 
 # Basalt Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Basalt Dust** is a dust added by TechReborn. It is used for further processing in <McItem slug="techreborn:industrial_centrifuge" inline={true}/>.
+
+## Recipe
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input techreborn:small_pile_of_basalt_dust techreborn:small_pile_of_basalt_dust air input techreborn:small_pile_of_basalt_dust techreborn:small_pile_of_basalt_dust air input air air air output techreborn:basalt_dust"/>
+
+<McItem slug="techreborn:grinder" inline={true}/> recipe:  
+Recipe for grinding Basalt Block into dust registered by TechReborn if there are such blocks provided by other mods.
+
+## Usage
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input air air air input air techreborn:basalt_dust air input air air air output techreborn:small_pile_of_basalt_dust,4"/>
+
+<McItem slug="techreborn:industrial_centrifuge" inline={true}/> recipe:  
+16x <McItem slug="techreborn:basalt_dust" inline={true}/> → <McItem slug="techreborn:peridot_dust" inline={true}/> + 3x <McItem slug="techreborn:calcite_dust" inline={true}/> + 8x <McItem slug="techreborn:flint_dust" inline={true}/> + 4x <McItem slug="techreborn:dark_ashes" inline={true}/>
