--- a/docs/items/dusts/bauxite_dust.mdx
+++ b/docs/items/dusts/bauxite_dust.mdx
@@ -6,5 +6,26 @@ title: Bauxite Dust
 
 # Bauxite Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Bauxite Dust** is a dust added by TechReborn. It is used to produce <McItem slug="techreborn:aluminium_dust" inline={true}/> in <McItem slug="techreborn:industrial_electrolyzer" inline={true}/>.
+
+## Recipe
+
+<CraftingTable recipe="input techreborn:small_pile_of_bauxite_dust techreborn:small_pile_of_bauxite_dust air input techreborn:small_pile_of_bauxite_dust techreborn:small_pile_of_bauxite_dust air input air air air output techreborn:bauxite_dust"/>
+
+<McItem slug="techreborn:grinder" inline={true}/> recipe:  
+<McItem slug="techreborn:bauxite_ore" inline={true}/> → 2x <McItem slug="techreborn:bauxite_dust" inline={true}/>
+
+<McItem slug="techreborn:industrial_grinder" inline={true}/> recipe:  
+<McItem slug="techreborn:bauxite_ore" inline={true}/> + <McItem slug="techreborn:water_cell" inline={true}/> →  
+4x <McItem slug="techreborn:bauxite_dust" inline={true}/> + <McItem slug="techreborn:aluminium_dust" inline={true}/>
+
+## Usage
+
+<CraftingTable recipe="input air air air input air techreborn:bauxite_dust air input air air air output techreborn:small_pile_of_bauxite_dust,4"/>
+
+<McItem slug="techreborn:industrial_electrolyzer" inline={true}/> recipe:  
+12x <McItem slug="techreborn:bauxite_dust" inline={true}/> + 8x <McItem slug="techreborn:empty_cell" inline={true}/> →  
+8x <McItem slug="techreborn:aluminium_dust" inline={true}/> +  
+2x <McItem slug="techreborn:small_pile_of_titanium_dust" inline={true}/> +  
+5x <McItem slug="techreborn:hydrogen_cell" inline={true}/> +  
+3x <McItem slug="techreborn:compressed_air_cell" inline={true}/>
