--- a/docs/items/dusts/cinnabar_dust.mdx
+++ b/docs/items/dusts/cinnabar_dust.mdx
@@ -6,5 +6,24 @@ title: Cinnabar Dust
 
 # Cinnabar Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Cinnabar Dust** is an intermediate material used for further processing.
+
+## Recipe
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input techreborn:small_pile_of_cinnabar_dust techreborn:small_pile_of_cinnabar_dust air input techreborn:small_pile_of_cinnabar_dust techreborn:small_pile_of_cinnabar_dust air input air air air output techreborn:cinnabar_dust"/>
+
+<McItem slug="techreborn:grinder" inline={true}/> recipe:  
+<McItem slug="techreborn:cinnabar_ore" inline={true}/> → 2x <McItem slug="techreborn:cinnabar_dust" inline={true}/>
+
+<McItem slug="techreborn:industrial_grinder" inline={true}/> recipe:  
+<McItem slug="techreborn:cinnabar_ore" inline={true}/> + <McItem slug="techreborn:water_cell" inline={true}/> →  
+5x <McItem slug="techreborn:cinnabar_dust" inline={true}/> + 2x <McItem slug="techreborn:small_pile_of_redstone" inline={true}/> + <McItem slug="techreborn:small_pile_of_glowstone_dust" inline={true}/>
+
+## Usage
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input air air air input air techreborn:cinnabar_dust air input air air air output techreborn:small_pile_of_cinnabar_dust,4"/>
+
+<McItem slug="techreborn:industrial_electrolyzer" inline={true}/> recipe:  
+<McItem slug="techreborn:cinnabar_dust" inline={true}/> + <McItem slug="techreborn:empty_cell" inline={true}/> → <McItem slug="techreborn:mercury_cell" inline={true}/> + <McItem slug="techreborn:sulfur_dust" inline={true}/>
