--- a/docs/items/dusts/clay_dust.mdx
+++ b/docs/items/dusts/clay_dust.mdx
@@ -6,5 +6,22 @@ title: Clay Dust
 
 # Clay Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Clay Dust** is an itermediate material used for further processing.
+
+## Recipe
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input techreborn:small_pile_of_clay_dust techreborn:small_pile_of_clay_dust air input techreborn:small_pile_of_clay_dust techreborn:small_pile_of_clay_dust air input air air air output techreborn:clay_dust"/>
+
+<McItem slug="techreborn:grinder" inline={true}/> recipe:  
+<McItem slug="minecraft:clay_item" inline={true}/> → <McItem slug="techreborn:clay_dust" inline={true}/>
+
+## Usage
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input air air air input air techreborn:clay_dust air input air air air output techreborn:small_pile_of_clay_dust,4"/>
+
+<McItem slug="techreborn:industrial_electrolyzer" inline={true}/> recipe:  
+8x <McItem slug="techreborn:clay_dust" inline={true}/> + 5x <McItem slug="techreborn:empty_cell" inline={true}/> →  
+<McItem slug="techreborn:lithium_cell" inline={true}/> + 2x <McItem slug="techreborn:silicon_cell" inline={true}/> +  
+2x <McItem slug="techreborn:aluminium_dust" inline={true}/> + 2x <McItem slug="techreborn:sodium_cell" inline={true}/>
