--- a/docs/items/dusts/electrum_dust.mdx
+++ b/docs/items/dusts/electrum_dust.mdx
@@ -6,5 +6,23 @@ title: Electrum Dust
 
 # Electrum Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Electrum Dust** is a dust added by TechReborn. It is used to produce <McItem slug="techreborn:electrum_ingot" inline={true}/>.
+
+## Recipe
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input techreborn:small_pile_of_electrum_dust techreborn:small_pile_of_electrum_dust air input techreborn:small_pile_of_electrum_dust techreborn:small_pile_of_electrum_dust air input air air air output techreborn:electrum_dust"/>
+
+<McItem slug="techreborn:grinder" inline={true}/> recipe:  
+<McItem slug="techreborn:electrum_ingot" inline={true}/> → <McItem slug="techreborn:electrum_dust" inline={true}/>
+
+## Usage
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input air air air input air techreborn:electrum_dust air input air air air output techreborn:small_pile_of_electrum_dust,4"/>
+
+**Smelting recipe:**  
+<McItem slug="techreborn:electrum_dust" inline={true}/> → <McItem slug="techreborn:electrum_ingot" inline={true}/>
+
+<McItem slug="techreborn:industrial_centrifuge" inline={true}/> recipe:  
+<McItem slug="techreborn:electrum_dust" inline={true}/> → 2x <McItem slug="techreborn:small_pile_of_gold_dust" inline={true}/> + 2x <McItem slug="techreborn:small_pile_of_silver_dust" inline={true}/>
