--- a/docs/items/dusts/ender_pearl_dust.mdx
+++ b/docs/items/dusts/ender_pearl_dust.mdx
@@ -6,5 +6,24 @@ title: Ender Pearl Dust
 
 # Ender Pearl Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Ender Pearl Dust** is a dust added by TechReborn. It is used for further processing.
+
+## Recipe
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input techreborn:small_pile_of_ender_pearl_dust techreborn:small_pile_of_ender_pearl_dust air input techreborn:small_pile_of_ender_pearl_dust techreborn:small_pile_of_ender_pearl_dust air input air air air output techreborn:ender_pearl_dust"/>
+
+<McItem slug="techreborn:grinder" inline={true}/> recipe:  
+<McItem slug="minecraft:ender_pearl" inline={true}/> → 2x <McItem slug="techreborn:ender_pearl_dust" inline={true}/>
+
+<McItem slug="techreborn:industrial_centrifuge" inline={true}/> recipe:  
+2x <McItem slug="techreborn:ender_eye_dust" inline={true}/> → 2x <McItem slug="techreborn:ender_pearl_dust" inline={true}/> + <McItem slug="minecraft:blaze_powder" inline={true}/>
+
+## Usage
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input air air air input air techreborn:ender_pearl_dust air input air air air output techreborn:small_pile_of_ender_pearl_dust,4"/>
+
+<McItem slug="techreborn:industrial_electrolyzer" inline={true}/> recipe:  
+16x <McItem slug="techreborn:ender_pearl_dust" inline={true}/> + 16x <McItem slug="techreborn:empty_cell" inline={true}/> →  
+5x <McItem slug="techreborn:nitrogen_cell" inline={true}/> + <McItem slug="techreborn:beryllium_cell" inline={true}/> + 4x <McItem slug="techreborn:potassium_cell" inline={true}/> + 6x <McItem slug="techreborn:chlorite_cell" inline={true}/>
