--- a/docs/items/dusts/galena_dust.mdx
+++ b/docs/items/dusts/galena_dust.mdx
@@ -6,5 +6,28 @@ title: Galena Dust
 
 # Galena Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Galena Dust** is a dust added by TechReborn. It is used to produce <McItem slug="techreborn:silver_ingot" inline={true}/>, <McItem slug="techreborn:lead_ingot" inline={true}/> and <McItem slug="techreborn:sulfur_dust" inline={true}/>.
+
+## Recipe
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input techreborn:small_pile_of_galena_dust techreborn:small_pile_of_galena_dust air input techreborn:small_pile_of_galena_dust techreborn:small_pile_of_galena_dust air input air air air output techreborn:galena_dust"/>
+
+<McItem slug="techreborn:grinder" inline={true}/> recipe:  
+<McItem slug="techreborn:galena_ore" inline={true}/> → 2x <McItem slug="techreborn:galena_dust" inline={true}/>
+
+<McItem slug="techreborn:industrial_grinder" inline={true}/> recipe:  
+<McItem slug="techreborn:galena_ore" inline={true}/> + <McItem slug="techreborn:water_cell" inline={true}/> → 2x <McItem slug="techreborn:galena_dust" inline={true}/> + <McItem slug="techreborn:sulfur_dust" inline={true}/>  
+<McItem slug="techreborn:galena_ore" inline={true}/> + <McItem slug="techreborn:mercury_cell" inline={true}/> → 2x <McItem slug="techreborn:galena_dust" inline={true}/> + <McItem slug="techreborn:sulfur_dust" inline={true}/> + <McItem slug="techreborn:silver_dust" inline={true}/>
+
+## Usage
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input air air air input air techreborn:galena_dust air input air air air output techreborn:small_pile_of_galena_dust,4"/>
+
+<McItem slug="techreborn:blast_furnace" inline={true}/> recipe:  
+2x <McItem slug="techreborn:galena_dust" inline={true}/> → <McItem slug="techreborn:silver_ingot" inline={true}/> + <McItem slug="techreborn:lead_ingot" inline={true}/>  
+_Requires 1500 heat_
+
+<McItem slug="techreborn:industrial_electrolyzer" inline={true}/> recipe:  
+2x <McItem slug="techreborn:galena_dust" inline={true}/> → 3x <McItem slug="techreborn:small_pile_of_silver_dust" inline={true}/> + 3x <McItem slug="techreborn:small_pile_of_lead_dust" inline={true}/> + 2x <McItem slug="techreborn:small_pile_of_sulfur_dust" inline={true}/>
