--- a/docs/items/dusts/grossular_dust.mdx
+++ b/docs/items/dusts/grossular_dust.mdx
@@ -6,5 +6,26 @@ title: Grossular Dust
 
 # Grossular Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Grossular Dust** is an intermediate product received by processing <McItem slug="techreborn:yellow_garnet_dust" inline={true}/> in <McItem slug="techreborn:industrial_centrifuge" inline={true}/>.
+
+## Recipe
+
+<CraftingTable recipe="input techreborn:small_pile_of_grossular_dust techreborn:small_pile_of_grossular_dust air input techreborn:small_pile_of_grossular_dust techreborn:small_pile_of_grossular_dust air input air air air output techreborn:grossular_dust"/>
+
+<McItem slug="techreborn:industrial_centrifuge" inline={true}/> recipe:  
+16x <McItem slug="techreborn:yellow_garnet_dust" inline={true}/> →  
+5x <McItem slug="techreborn:andradite_dust" inline={true}/> +  
+8x <McItem slug="techreborn:grossular_dust" inline={true}/> +  
+3x <McItem slug="techreborn:uvarovite_dust" inline={true}/>
+
+## Usage
+
+**Grossular Dust** could be further processed in <McItem slug="techreborn:industrial_electrolyzer" inline={true}/>  
+20x <McItem slug="techreborn:grossular_dust" inline={true}/> + 12x <McItem slug="techreborn:empty_cell" inline={true}/> →  
+3x <McItem slug="techreborn:calcium_cell" inline={true}/> +  
+2x <McItem slug="techreborn:aluminium_dust" inline={true}/> +  
+3x <McItem slug="techreborn:silicon_cell" inline={true}/> +  
+6x <McItem slug="techreborn:compressed_air_cell" inline={true}/>
+
+Besides that **Grossular Dust** could be split into small piles using <McItem slug="minecraft:crafting_table" inline={true}/>  
+<CraftingTable recipe="input air air air input air techreborn:grossular_dust air input air air air output techreborn:small_pile_of_grossular_dust,4"/>
