--- a/docs/items/dusts/invar_dust.mdx
+++ b/docs/items/dusts/invar_dust.mdx
@@ -6,5 +6,20 @@ title: Invar Dust
 
 # Invar Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Invar Dust** is a dust added by TechReborn. It is used to produce <McItem slug="techreborn:invar_ingot" inline={true}/>.
+
+## Recipe
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input techreborn:small_pile_of_invar_dust techreborn:small_pile_of_invar_dust air input techreborn:small_pile_of_invar_dust techreborn:small_pile_of_invar_dust air input air air air output techreborn:invar_dust"/>
+
+<McItem slug="techreborn:grinder" inline={true}/> recipe:  
+<McItem slug="techreborn:invar_ingot" inline={true}/> → <McItem slug="techreborn:invar_dust" inline={true}/>
+
+## Usage
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input air air air input air techreborn:invar_dust air input air air air output techreborn:small_pile_of_invar_dust,4"/>
+
+**Smelting recipe:**  
+<McItem slug="techreborn:invar_dust" inline={true}/> → <McItem slug="techreborn:invar_ingot" inline={true}/>
