--- a/docs/items/dusts/manganese_dust.mdx
+++ b/docs/items/dusts/manganese_dust.mdx
@@ -6,5 +6,18 @@ title: Manganese Dust
 
 # Manganese Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Manganese Dust** is an intermediate material that will be used for further processing in future.
+
+## Recipe
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input techreborn:small_pile_of_manganese_dust techreborn:small_pile_of_manganese_dust air input techreborn:small_pile_of_manganese_dust techreborn:small_pile_of_manganese_dust air input air air air output techreborn:manganese_dust"/>
+
+<McItem slug="techreborn:industrial_electrolyzer" inline={true}/> recipe:  
+20x <McItem slug="techreborn:spessartine_dust" inline={true}/> + 9x <McItem slug="techreborn:empty_cell" inline={true}/> →  
+2x <McItem slug="techreborn:aluminium_dust" inline={true}/> + 3x <McItem slug="techreborn:manganese_dust" inline={true}/> + 3x <McItem slug="techreborn:silicon_cell" inline={true}/> + 6x <McItem slug="techreborn:compressed_air_cell" inline={true}/>
+
+## Usage
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input air air air input air techreborn:manganese_dust air input air air air output techreborn:small_pile_of_manganese_dust,4"/>
