--- a/docs/items/dusts/marble_dust.mdx
+++ b/docs/items/dusts/marble_dust.mdx
@@ -6,5 +6,20 @@ title: Marble Dust
 
 # Marble Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Marble Dust** is a dust added by TechReborn. It is used for further processing in <McItem slug="techreborn:industrial_centrifuge" inline={true}/>.
+
+## Recipe
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input techreborn:small_pile_of_marble_dust techreborn:small_pile_of_marble_dust air input techreborn:small_pile_of_marble_dust techreborn:small_pile_of_marble_dust air input air air air output techreborn:marble_dust"/>
+
+<McItem slug="techreborn:grinder" inline={true}/> recipe:  
+Recipe for grinding marble block into dust registered by TechReborn if there are such blocks provided by other mods.
+
+## Usage
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input air air air input air techreborn:marble_dust air input air air air output techreborn:small_pile_of_marble_dust,4"/>
+
+<McItem slug="techreborn:industrial_centrifuge" inline={true}/> recipe:  
+<McItem slug="techreborn:marble_dust" inline={true}/> → <McItem slug="techreborn:magnesium_dust" inline={true}/> + 7x <McItem slug="techreborn:calcite_dust" inline={true}/>
