--- a/docs/items/dusts/obsidian_dust.mdx
+++ b/docs/items/dusts/obsidian_dust.mdx
@@ -6,5 +6,22 @@ title: Obsidian Dust
 
 # Obsidian Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Obsidian Dust** is an intermediate product used for further processing.
+
+## Recipe
+
+<CraftingTable recipe="input techreborn:small_pile_of_obsidian_dust techreborn:small_pile_of_obsidian_dust air input techreborn:small_pile_of_obsidian_dust techreborn:small_pile_of_obsidian_dust air input air air air output techreborn:obsidian_dust"/>
+
+<McItem slug="techreborn:grinder" inline={true}/> recipe:  
+<McItem slug="minecraft:obsidian" inline={true}/> → 4x <McItem slug="techreborn:obsidian_dust" inline={true}/>
+
+## Usage
+
+<CraftingTable recipe="input air air air input air techreborn:obsidian_dust air input air air air output techreborn:small_pile_of_obsidian_dust,4"/>
+
+<McItem slug="techreborn:industrial_electrolyzer" inline={true}/> recipe:  
+4x <McItem slug="techreborn:obsidian_dust" inline={true}/> + 3x <McItem slug="techreborn:empty_cell" inline={true}/> →  
+2x <McItem slug="techreborn:small_pile_of_magnesium_dust" inline={true}/> +  
+2x <McItem slug="techreborn:small_pile_of_iron_dust" inline={true}/> +  
+<McItem slug="techreborn:silicon_cell" inline={true}/> +  
+2x <McItem slug="techreborn:compressed_air_cell" inline={true}/>
