--- a/docs/items/dusts/red_garnet_dust.mdx
+++ b/docs/items/dusts/red_garnet_dust.mdx
@@ -6,5 +6,30 @@ title: Red Garnet Dust
 
 # Red Garnet Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Red Garnet Dust** is an intermediate product received by processing <McItem slug="techreborn:red_garnet" inline={true}/>.
+
+## Recipe
+
+<CraftingTable recipe="input techreborn:small_pile_of_red_garnet_dust techreborn:small_pile_of_red_garnet_dust air input techreborn:small_pile_of_red_garnet_dust techreborn:small_pile_of_red_garnet_dust air input air air air output techreborn:red_garnet_dust"/>
+
+<McItem slug="techreborn:grinder" inline={true}/> recipe:  
+<McItem slug="techreborn:red_garnet" inline={true}/> → <McItem slug="techreborn:red_garnet_dust" inline={true}/>
+
+<McItem slug="techreborn:implosion_compressor" inline={true}/> recipe:  
+9x <McItem slug="minecraft:block_of_redstone" inline={true}/> + 16x <McItem slug="minecraft:tnt" inline={true}/> →  
+4x <McItem slug="techreborn:red_garnet_dust" inline={true}/> + 4x <McItem slug="techreborn:dark_ashes" inline={true}/>
+
+## Usage
+
+**Red Garnet Dust** could be further processed in <McItem slug="techreborn:industrial_centrifuge" inline={true}/>  
+16x <McItem slug="techreborn:red_garnet_dust" inline={true}/> →  
+3x <McItem slug="techreborn:pyrope_dust" inline={true}/> +  
+5x <McItem slug="techreborn:almandine_dust" inline={true}/> +  
+8x <McItem slug="techreborn:spessartine_dust" inline={true}/>
+
+Besides that, **Red Garnet Dust** could be split into small piles using <McItem slug="minecraft:crafting_table" inline={true}/>  
+<CraftingTable recipe="input air air air input air techreborn:red_garnet_dust air input air air air output techreborn:small_pile_of_red_garnet_dust,4"/>
+
+Also, **Red Garnet Dust** could be compressed back into a gem using the raw power of TNT in the <McItem slug="techreborn:implosion_compressor" inline={true}/>  
+4x <McItem slug="techreborn:red_garnet_dust" inline={true}/> + 16x <McItem slug="minecraft:tnt" inline={true}/> →  
+3x <McItem slug="techreborn:red_garnet" inline={true}/> + 8x <McItem slug="techreborn:dark_ashes" inline={true}/>
