--- a/docs/items/dusts/saltpeter_dust.mdx
+++ b/docs/items/dusts/saltpeter_dust.mdx
@@ -6,5 +6,24 @@ title: Saltpeter Dust
 
 # Saltpeter Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Saltpeter Dust** is an intermediate material used for further processing.
+
+## Recipe
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input techreborn:small_pile_of_saltpeter_dust techreborn:small_pile_of_saltpeter_dust air input techreborn:small_pile_of_saltpeter_dust techreborn:small_pile_of_saltpeter_dust air input air air air output techreborn:saltpeter_dust"/>
+
+<McItem slug="techreborn:industrial_centrifuge" inline={true}/> recipe:  
+16x <McItem slug="minecraft:soul_sand" inline={true}/> + <McItem slug="techreborn:empty_cell" inline={true}/> →  
+10x <McItem slug="minecraft:sand" inline={true}/> + 4x <McItem slug="techreborn:saltpeter_dust" inline={true}/> +  
+<McItem slug="techreborn:coal_dust" inline={true}/> + <McItem slug="techreborn:oil_cell" inline={true}/>
+
+## Usage
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input air air air input air techreborn:saltpeter_dust air input air air air output techreborn:small_pile_of_saltpeter_dust,4"/>
+
+<McItem slug="techreborn:industrial_electrolyzer" inline={true}/> recipe:  
+10x <McItem slug="techreborn:saltpeter_dust" inline={true}/> + 7x <McItem slug="techreborn:empty_cell" inline={true}/> →  
+2x <McItem slug="techreborn:potassium_cell" inline={true}/> + 2x <McItem slug="techreborn:nitrogen_cell" inline={true}/> +  
+3x <McItem slug="techreborn:compressed_air_cell" inline={true}/>
