--- a/docs/items/dusts/sphalerite_dust.mdx
+++ b/docs/items/dusts/sphalerite_dust.mdx
@@ -6,5 +6,27 @@ title: Sphalerite Dust
 
 # Sphalerite Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Sphalerite Dust** is an intermediate product used to produce <McItem slug="techreborn:zinc_dust" inline={true}/>.
+
+## Recipe
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input techreborn:small_pile_of_sphalerite_dust techreborn:small_pile_of_sphalerite_dust air input techreborn:small_pile_of_sphalerite_dust techreborn:small_pile_of_sphalerite_dust air input air air air output techreborn:sphalerite_dust"/>
+
+<McItem slug="techreborn:grinder" inline={true}/> recipe:  
+<McItem slug="techreborn:sphalerite_ore" inline={true}/> → 2x <McItem slug="techreborn:sphalerite_dust" inline={true}/>
+
+<McItem slug="techreborn:industrial_grinder" inline={true}/> recipe:  
+<McItem slug="techreborn:sphalerite_ore" inline={true}/> + <McItem slug="techreborn:water_cell" inline={true}/> →  
+5x <McItem slug="techreborn:sphalerite_dust" inline={true}/> + <McItem slug="techreborn:small_pile_of_yellow_garnet_dust" inline={true}/> + <McItem slug="techreborn:zinc_dust" inline={true}/>
+
+<McItem slug="techreborn:sphalerite_ore" inline={true}/> + <McItem slug="techreborn:sodiumpersulfate_cell" inline={true}/> →  
+5x <McItem slug="techreborn:sphalerite_dust" inline={true}/> + <McItem slug="techreborn:small_pile_of_yellow_garnet_dust" inline={true}/> + <McItem slug="techreborn:zinc_dust" inline={true}/>
+
+## Usage
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input air air air input air techreborn:sphalerite_dust air input air air air output techreborn:small_pile_of_sphalerite_dust,4"/>
+
+<McItem slug="techreborn:industrial_electrolyzer" inline={true}/> recipe:  
+2x <McItem slug="techreborn:sphalerite_dust" inline={true}/> → <McItem slug="techreborn:zinc_dust" inline={true}/> + <McItem slug="techreborn:sulfur_dust" inline={true}/>
