--- a/docs/items/dusts/steel_dust.mdx
+++ b/docs/items/dusts/steel_dust.mdx
@@ -6,5 +6,20 @@ title: Steel Dust
 
 # Steel Dust
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the <mcitem>techreborn:grinder</mcitem> 
-or <mcitem>techreborn:industrial_grinder</mcitem>
+**Steel Dust** is a greatest dust ever. You can keep your <McItem slug="techreborn:grinder" inline={true}/> and <McItem slug="techreborn:blast_furnace" inline={true}/> busy by grinding ingot to dust and then back smelting dust to ingot!
+
+## Recipe
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input techreborn:small_pile_of_steel_dust techreborn:small_pile_of_steel_dust air input techreborn:small_pile_of_steel_dust techreborn:small_pile_of_steel_dust air input air air air output techreborn:steel_dust"/>
+
+<McItem slug="techreborn:grinder" inline={true}/> recipe:  
+<McItem slug="techreborn:steel_ingot" inline={true}/> → <McItem slug="techreborn:steel_dust" inline={true}/>
+
+## Usage
+
+<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
+<CraftingTable recipe="input air air air input air techreborn:steel_dust air input air air air output techreborn:small_pile_of_steel_dust,4"/>
+
+<McItem slug="techreborn:blast_furnace" inline={true}/> recipe:  
+<McItem slug="techreborn:steel_dust" inline={true}/> → <McItem slug="techreborn:steel_ingot" inline={true}/>
